Fix the alignment with the reference image

--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,7 @@ body {
 header {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 3rem 1fr 3rem 3rem 0;
-  gap: .75rem;
+  grid-template-rows: 3rem 1fr 3.5rem 3rem .75rem;
 }
 
 header h1 {
@@ -49,7 +48,7 @@ header h2 {
   font-size: 1.5rem;
   grid-column: 1 / -1;
   grid-row: 3;
-  align-self: start;
+  align-self: end;
   z-index: 1;
 }
 
